# event_listener

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs  main_bak.rs  main_bak2.rs  send_xt.rs  subscribe_blocks.rs  subscribe_events.rs  subscribe_finalized_blocks.rs  t.rs
