[package]
name = "event_listener"
version = "0.1.0"
authors = ["daogangtang <daogangtang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
tokio = "0.1"
futures = "0.1.28"
srml-system = { git = "https://github.com/paritytech/substrate/", package = "srml-system" }
node-runtime = { git = "https://github.com/paritytech/substrate/", package = "node-runtime" }
srml-balances = { git = "https://github.com/paritytech/substrate/", package = "srml-balances" }
runtime_primitives = { git = "https://github.com/paritytech/substrate/", package = "sr-primitives" }
substrate-subxt = {path="../substrate-subxt"}

